examples/admission.yaml
# register to intercept stash CRD creates / updates
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission.foocontroller.k8s.io
webhooks:
- name: admission.foocontroller.k8s.io
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/admission.foocontroller.k8s.io/v1alpha1/admissionreviews
    # onessl get kube-ca | onessl base64
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNE1ERXlPVEEwTlRreU9Wb1hEVEk0TURFeU56QTBOVGt5T1Zvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT05OCnFvOXNTSzQ4MHU2a09VeHp3NWMxc0J4N1JiRk55eXJxWkVrMGwrRjJRL1lhdTcrNnY5QktCSU1jcnNKYlRkVlQKVVdWNlVydGtVTEJLekY3NkNuYXJkRFQwRTJURjJpYW5uNU56ZGM1TkhPdCsrTWpUUFBqOHQ1Z2N5dzM2WER4QQpKNk52dE9mMnRhNj [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - foocontroller.k8s.io
    apiVersions:
    - "*"
    resources:
    - "*"
  failurePolicy: Fail
